--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
     background: lavenderblush;
   }
+h1 {
+    text-align: center;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+h2 {
+    font-size: small;
+    text-align: center;
+    font-family: :Impact
+}
+p {
+    width: 1100px;
+    margin: 8px auto;
+}
