--- a/style.css
+++ b/style.css
@@ -3,14 +3,18 @@ body {
   }
 h1 {
     text-align: center;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-size: xx-large;
 }
 h2 {
     font-size: small;
     text-align: center;
-    font-family: :Impact
+    font-weight:600;
 }
 p {
     width: 1100px;
     margin: 8px auto;
+    font-size: larger;
+}
+h1, h2, p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
