--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h2 {
     font-size: small;
     text-align: center;
     font-weight:600;
+    padding-bottom: 40px;
 }
 p {
     width: 1100px;
@@ -17,4 +18,8 @@ p {
 }
 h1, h2, p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+img {
+    margin: 50px auto;
+    padding-left: 600px;
 }
